http://passwordsafe.sourceforge.net. Details about changes to older
releases may be found in the file ChangeLog.txt.

Bugs fixed in 3.14.02F
======================
[2102624] Can now change a normal entry into an alias or an alias'
base entry into an alias of another entry taking its aliases with it.
[2100916] Correct colouring of the Dragbar icons after changing
selected entry.

Changes to Existing Features in 3.14.02F
========================================
[] Master password policy defined and enforced:
 1. Minimum length of 15 characters
 2. Minimum 3 out of 4 lowercase/uppercase/digit/symbol
 3. Expiration period of one year.


New Features for 3.14.02
========================


Bugs fixed in 3.14.01
=====================
[2096504] All user set fields are now checked when merging databases.
[2096164] -h, -u and -g command line functionality restored.
[2088540] Showing Dragbar is now independent of displaying the
Toolbar.
[2085103] New database can no longer be created as R/O.
[2085089] Database field in "Safe combination Entry" dialog no longer
loses focus to passphrase field after each character change.

Bugs fixed in 3.14
==================
[2071489] off-by-one bug in range for generated passwords fixed.
[1978486] The R/W status of a database is unchanged if it is already 
open and the user cancels an open file action.
[1978475] Clear clipboard options are no longer interchanged.
[1970652] No longer crashes when user exits search for non-existant
database.
[1966718] Text in 'Notes" now has horizontal scroll bar during Add.
[1959193] PWS now honors the read-only command line parameter (-r)
for first file open. Afterwards, the behavior is determined by the R/O
open preference or user selecting read-only at open time.
[1954268] Aliases and shortcuts now processed correctly during merge.
[1933174, 2015132] Reports from Import (Text or XML), Compare, Merge
and Find are no longer written to disk by default.
[] Expired icon now correct after password change.